# pql

./: .gitignore  .markdownlint.json  API_COVERAGE.md  README.md  ROADMAP.md  _foo.py  foo.py  pyproject.toml  t.py
.github/instructions/: pql_instructions.instructions.md
scripts/: README.md  __init__.py  __main__.py  _func_table_analysis.py  _rel_generator.py  _theme_generator.py  _utils.py  compare_polars.py  generate_fns.py
scripts/comparator/: __init__.py  _array_builder.py  _infos.py  _main.py  _models.py  _parse.py  _rules.py  _text.py
scripts/core_generator/: __init__.py  _main.py  _parse.py  _rules.py  _sections.py  _structs.py  _target.py
scripts/fn_generator/: _dtypes.py  _format.py  _main.py  _query.py  _rules.py  _schemas.py  _sections.py
scripts/generator/: __init__.py  _main.py  _models.py  _query.py  _rules.py  _schemas.py  _sections.py  _str_builder.py
scripts/meta_generator/: __init__.py  _main.py
scripts/rel_generator/: __init__.py  _main.py  _parse.py  _raw.py  _rules.py  _structs.py  _target.py
src/pql/: __init__.py  _args_iter.py  _ast.py  _computations.py  _creation.py  _datatypes.py  _expr.py  _frame.py  _funcs.py  _groupby.py  _joins.py  _meta.py  _namespaces.py  _parser.py  _schema.py  _types.py  _typing.py  _when.py  datatypes.py  meta.py  selectors.py  sql.py
src/pql/sql/: README.md  __init__.py  _converters.py  _core.py  _creation.py  _datatypes.py  _expr.py  _exprs.py  _frame.py  _funcs.py  _generated_fns.py  _manual_fns.py  _raw.py  _rel.py  _rel_conversions.py  _typing.py  _when.py  _window.py  _windows.py  datatypes.py  fns.py  fns_copy.py  namespaces.py  typing.py  utils.py
src/pql/sql/_code_gen/: __init__.py  _core.py  _fns.py  _rel.py  meta.py
tests/: __init__.py  _data.py  _utils.py  test_arr_namespace.py  test_complex_qry.py  test_conversions.py  test_datatypes.py  test_dt_namespace.py  test_equivalence.py  test_expr.py  test_exprs.py  test_files.py  test_funcs.py  test_lazyframe.py  test_lazyframe_joins.py  test_lazyframe_meta.py  test_lazygroupby.py  test_list_namespace.py  test_main.py  test_meta.py  test_name_namespace.py  test_selectors.py  test_slots.py  test_str_namespace.py  test_struct_namespace.py
tests/data/: foo.csv  foo.json
