[project]
    dependencies    = [
    "pyochain>=0.9.2",
    "sqlglot[rs]>=28.6.0",
]
    description     = "Polars syntax for SQL"
    name            = "pql"
    readme          = "README.md"
    requires-python = ">=3.13"
    version         = "0.1.0"

[dependency-groups]
    dev = [
    "duckdb>=1.4.3",
    "polars>=1.37.1",
    "pyarrow>=23.0.0",
    "pytest>=9.0.2",
]
[build-system]
    build-backend = "uv_build"
    requires      = ["uv_build>=0.8.15,<0.9.0"]
[tool.ruff]
    lint.ignore = [
        "A001",
        "A004",
        "C417",
        "COM812",
        "COM812",
        "D401",
        "E501",
        "FIX002",
        "PLC0415",
        "PLR2004",
        "S101",
        "S608",
        "SLF001",
        "T201",
        "TC003",
        "TC006",
        "TD002",
        "TD003",
        "TID252",
    ]
    lint.select = ["ALL"]
    [tool.ruff.format]
        docstring-code-format = true
    [tool.ruff.lint.pydocstyle]
        convention = "google"
    [tool.ruff.lint.per-file-ignores]
        "tests/*" = ["D100", "D101", "D102", "D103", "D104"]
