[project]
    dependencies = [
        "duckdb>=1.4.4",
        "narwhals>=2.16.0",
        "pyochain>=0.9.2",
        "sqlparse>=0.5.5",
    ]
    description = "Polars syntax for SQL"
    name = "pql"
    readme = "README.md"
    requires-python = ">=3.13"
    version = "0.1.0"

[dependency-groups]
    dev = [
        "asttoolkit>=0.11.0",
        "matplotlib>=3.10.8",
        "narwhals>=2.15.0",
        "pandas>=3.0.1",
        "polars>=1.37.1",
        "pyarrow-stubs>=20.0.0.20251215",
        "pyarrow>=23.0.0",
        "pytest-cov>=7.0.0",
        "pytest>=9.0.2",
        "pytz>=2025.2",
        "ruff>=0.14.14",
        "torch>=2.10.0",
        "typer>=0.21.1",
        "types-tensorflow>=2.18.0.20260121",
    ]
[build-system]
    build-backend = "uv_build"
    requires      = ["uv_build>=0.8.15,<0.9.0"]
[tool.ruff]
    lint.ignore = [
        "A001",
        "A004",
        "C417",
        "COM812",
        "COM812",
        "D401",
        "E501",
        "FIX002",
        "PD003",
        "PLC0415",
        "PLR2004",
        "S101",
        "S608",
        "SLF001",
        "T201",
        "T203",
        "TC003",
        "TC006",
        "TD002",
        "TD003",
        "TID252",
    ]
    lint.select = ["ALL"]
    [tool.ruff.format]
        docstring-code-format = true
    [tool.ruff.lint.pydocstyle]
        convention = "google"
    [tool.ruff.lint.per-file-ignores]
        "src/pql/sql/_code_gen/*.py" = [
            "A002",
            "ANN401",
            "FBT001",
            "FBT002",
            "PLR0913",
            "PLW1641",
        ]
        "t.py" = ["ANN201", "D100", "D101", "D103"]
        "tests/*" = ["D100", "D101", "D102", "D103", "D104"]
    [tool.ruff.lint.isort]
        combine-as-imports = true
[tool.coverage.run]
    omit = ["src/pql/_types.py"]
